--- a/index.html
+++ b/index.html
@@ -4,18 +4,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Password Palooza</title>
+    <title>Password Analyzer</title>
     <meta name="description" content="Analyze and improve your password security" />
     <meta name="author" content="Lovable" />
-
-    <meta property="og:title" content="Password Palooza" />
-    <meta property="og:description" content="Analyze and improve your password security" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<link rel="icon" href="./public/password1.png" type="image/x-icon">
+    <meta property="og:title" content="Password Analyzer" />
   </head>
 
   <body>
